# opengl_on_rust

./: Cargo.toml  readme.md
rsc/shader/: shader.fs  shader.vs
src/: main.rs  sec2.rs  shader.rs  vertex.rs
