[package]
name = "opengl_on_rust"
version = "0.1.0"
authors = ["Saginoya-nm7 <sqrt.trill425@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.4"
gl = "0.14.0"
cgmath = "0.18.0"
c_str_macro = "1.0.3"